--- a/docs/benchmarks/tsbs/v0.7.0.md
+++ b/docs/benchmarks/tsbs/v0.7.0.md
@@ -18,6 +18,7 @@
 | CPU     | 8 core         |
 | Memory  | 16GB           |
 | Disk    | 50GB (GP3)     |
+| OS      | Ubuntu 22.04.1 |
 
 
 ## Write performance
