docs: fix format

--- a/docs/benchmarks/tsbs/v0.7.0.md
+++ b/docs/benchmarks/tsbs/v0.7.0.md
@@ -23,15 +23,15 @@
 
 ## Write performance
 
-| Environment        | Ingest rate（rows/s） |
+| Environment        | Ingest rate (rows/s)  |
 | ------------------ | --------------------- |
-| Local              | 3695814.64             |
-| EC2 c5d.2xlarge    | 2987166.64             |
+| Local              | 3695814.64            |
+| EC2 c5d.2xlarge    | 2987166.64            |
 
 
 ## Query performance
 
-| Query type            | Local (ms) | EC2 c5d.2xlarge (ms) |
+| Query type            | Local (ms) | EC2 c5d.2xlarge (ms)   |
 | --------------------- | ---------- | ---------------------- |
 | cpu-max-all-1         | 30.56      | 54.74                  |
 | cpu-max-all-8         | 52.69      | 70.50                  |
